<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/setting_pop_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/net_input_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ether_account_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/net_input_account"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/net_input_pwd_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ether_pwd_input"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/net_input_pwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="55dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/ether_autoconnect_cb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/setting_checkbox" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/net_auto_connect"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ether_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_ok"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/ether_cancle_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:background="@drawable/setting_btn_ok"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>