<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_set_bg"
    android:orientation="vertical" >

    <!-- android:background="@drawable/setting_bg2" -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/system"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>
    <!-- android:background="@drawable/setting_bg10" -->

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/update_local_txt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/system_update_local"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/update_net_txt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/system_update_net"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>